...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_headline"
                    tools:text="@string/verification_login_msg_mail" />

                <com.daimler.mbuikit.widgets.edittexts.MBPinTextInput
                    android:id="@+id/edit_pin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/mb_margin_large"
                    android:layout_marginTop="@dimen/mb_margin_large"
                    android:layout_marginEnd="@dimen/mb_margin_large"
                    android:inputType="number"
...
                    android:visibility="@{safeUnbox(model.validationProgressVisible)}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edit_pin" />

                <com.daimler.mbuikit.widgets.buttons.MBPrimaryButton
                    android:id="@+id/btn_continue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/mb_margin_default"
                    android:layout_marginTop="@dimen/mb_margin_large"
                    android:layout_marginEnd="@dimen/mb_margin_default"
                    android:layout_marginBottom="@dimen/mb_margin_default"
...
